2007-10-17  Ludovic Courtès  <ludo@gnu.org>

	* read.c (CHAR_IS_BLANK_): Add `\r' (ASCII 0x0d).  This fixes a
	regression compared to 1.8.2.  Reported by Puneet
	<schemer@gmail.com>.

2007-10-10  Ludovic Courtès  <ludo@gnu.org>

	* pthread-threads.h (SCM_I_PTHREAD_MUTEX_INITIALIZER): Check
	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.
	* gen-scmconfig.h.in
	(SCM_I_GSC_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER): New.
	* gen-scmconfig.c (main): Define
	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.

2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* threads.c (on_thread_exit): Don't call `scm_leave_guile ()'
	since we're already in non-guile mode.  Reported by Greg Toxel
	for NetBSD.

2007-09-11  Kevin Ryde  <user42@zip.com.au>

	* posix.c (scm_putenv): Confine the putenv("NAME=") bit to mingw, use
	putenv("NAME") as the fallback everywhere else.  In particular this is
	needed for solaris 9.  Reported by Frank Storbeck.
	
2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* read.c (flush_ws): Handle SCSH block comments.

2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	Fix alignment issues which showed up at least on SPARC.

	* socket.c (scm_t_max_sockaddr, scm_t_getsockopt_result): New.
	(scm_inet_pton): Change DST to `scm_t_uint32' for correct
	alignment.
	(scm_getsockopt): Change OPTVAL to `scm_t_getsockopt_result' for
	correct alignment.
	(_scm_from_sockaddr): Change ADDRESS to `scm_t_max_sockaddr *'.
	(scm_from_sockaddr): Cast ADDRESS to `scm_t_max_sockaddr *'.
	(MAX_SIZE_UN, MAX_SIZE_IN6): Removed.
	(scm_accept, scm_getsockname, scm_getpeername, scm_recvfrom):
	Use `scm_t_max_sockaddr' instead of "char max_addr[MAX_ADDR_SIZE]".

2007-09-03  Kevin Ryde  <user42@zip.com.au>

	* numbers.c (scm_log): Test HAVE_CLOG as well as HAVE_COMPLEX_DOUBLE
	before using clog().  It's possible for gcc to provide the "complex
	double" type, but for the system not to have the complex funcs.
	(scm_exp): Ditto HAVE_CEXP for cexp().

2007-09-02  Ludovic Courtès  <ludo@gnu.org>
