@@ -1,3 +1,9 @@
+2007-10-19  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* eval.c (unmemoize_delay): Extend the environment before
+	unmemoizing the promise thunk.  This fixes a segmentation fault
+	reported by Frank Schwidom.
+
 2007-10-17  Ludovic Courtès  <ludo@gnu.org>
 
 	* read.c (CHAR_IS_BLANK_): Add `\r' (ASCII 0x0d).  This fixes a
